--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ section{
   padding: 50px;
   text-align: center;
   background-color: #000000
+    body {
+ background-image: url("https://i.ibb.co/k9Sc4Kb/Screen-Shot-2023-04-13-at-9-50-16-AM.png");
+}
     
     @media (max-width: 440px) {
   section{
